# RealDex

./: .gitignore  .gitmodules  DepthCamera_2023-12-07-09-06-38.json  README.md  TODO  data_collection.md  data_collection.zsh  testfile.txt  yumeng_notes.md
.history/: data_collection_20231114102526.md  data_collection_20231114105245.md  data_collection_20231114105246.md  data_collection_20231114105303.md  data_collection_20231114105304.md  data_collection_20231114105321.md  data_collection_20231114105322.md  data_collection_20231114105409.md  data_collection_20231114105410.md  data_collection_20231114105423.md  data_collection_20231114105424.md  data_collection_20231114105447.md  data_collection_20231114105522.md  data_collection_20231114105523.md  data_collection_20231114110316.md  data_collection_20231114110321.md  data_collection_20231114110329.md  data_collection_20231114110330.md  data_collection_20231114110335.md  data_collection_20231114110337.md  data_collection_20231114110338.md  data_collection_20231114110339.md  data_collection_20231114110340.md  data_collection_20231114110342.md  data_collection_20231114110344.md  data_collection_20231114110348.md  data_collection_20231114110349.md  data_collection_20231114110355.md  data_collection_20231114110401.md  data_collection_20231114110404.md  data_collection_20231114110405.md  data_collection_20231114110408.md  data_collection_20231114110409.md  data_collection_20231114110410.md  data_collection_20231114110412.md  data_collection_20231114110413.md  data_collection_20231114110414.md  data_collection_20231114110456.md  data_collection_20231114110459.md  data_collection_20231114110502.md  (+123 more)
.history/data_process/: bimanual_srhand_ur_20231128195105.urdf  data_process_20231206203736.py  data_process_20231206203738.py  data_process_20231206203803.py  data_process_20231207154459.py  data_process_20231207154520.py  data_process_20231207154522.py  data_process_20231207154606.py  data_process_20231207155307.py
affordance-CVAE/: eval_obman_mano.py  train_coarsenet.py  train_grab_mano_vertex.py
affordance-CVAE/dataset/: dataset_grab.py  dataset_obman_cmap.py  dataset_obman_mano.py
affordance-CVAE/network/: affordanceNet_obman_mano_param.py  affordanceNet_obman_mano_vertex.py  pointnet_encoder.py
affordance-CVAE/scripts/: mano test.py  test_exterior.py  vis_3d.py
affordance-CVAE/utils/: loss.py  loss_coarsenet.py  utils.py  utils_vis.py
affordanceCVAE/: data_preprocess.py  eval_grab_mano_vertex.py  eval_obman_mano_vertex.py  train.sh  train_coarsenet.py  train_grab_mano_vertex.py  train_obman_mano.py  train_obman_mano_vertex.py
calibration_data/: cam0_depth.txt  cam2_depth.txt  cam2_rgb.txt  cam3_depth.txt  cam3_rgb.txt
calibration_ws/: ReadMe.md  k4aviewer.err
calibration_ws/calibration_process/: CMakeLists.txt
calibration_ws/calibration_process/data/: cali01.json  cali02.json  cali03.json  calibration.json  cam0_rgb.txt  cam1_depth.txt  cam1_rgb.txt  cam3_rgb.txt
calibration_ws/calibration_process/scripts/: Ros_Analysis.py  pick_good_intrinsics.py
calibration_ws/calibration_process/shell/: calibrate.sh  compress_upload.sh  dealBag.sh  delete_orig_bag.sh  record4mkv.sh  recordBag.sh
calibration_ws/calibration_process/src/: cali1_trans.cpp  k4acalibration_trans.cpp  main.cpp  plyMerge.cpp  pointcloudMerge.cpp  readBag.cpp  readBag_withopen3d.cpp  readBag_without_color.cpp
data_preprocess/: clear_cache.py  dataloader.py  gen_pcd.py  kintree.py  main.py  optim_shadow_hand.py  read_rosbag.ipynb  read_rosbag.py  rgbd_to_pc.py  test.ipynb  vis_cad.py  vis_tools.py
data_process/: data_process.ipynb  data_process.py  pointcloud_mesh_align.py  scale_model.py  test.ipynb  transform_mesh.ipynb
datasets/: dexgraspnet_dataset.py
dexgrasp_generation/: Singularity  checkpoints  data  environment.yml  eval.sh  eval_results  results  train.sh
download/: download_dataset.py  gdown_path.json  unzip_data.py
drive_ws/: ros_status.md
grasp_synthesis/: network.py
models/: hand_model.py  kinematic_tree.py  object_model.py
networks/: our_network.py  pose_synthesis.py
sapien_ws/: basic_robot.py  pid.py
train/: train_pose.py
(+30771 files in other folders)
